# TrExo

./: LICENSE  README.md  TrExo_plot.py  pyproject.toml  requirements.txt
TrExo/: TrExo_plot.py
